--- a/app/metal-ceramics.html
+++ b/app/metal-ceramics.html
@@ -14,8 +14,8 @@
 	
 	<!-- Template Basic Images Start -->
 	<meta property="og:image" content="path/to/image.jpg">
-	<link rel="icon" href="img/favicon/favicon.ico">
-	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
+	<link rel="icon" href="img/favicon/favicon.png">
+	<link rel="apple-touch-icon" href="img/favicon/favicon.png">
 	<!-- Template Basic Images End -->
 	
 	<!-- Custom Browsers Color Start -->
@@ -101,56 +101,48 @@
             <div class="row align-items-center">
                 <div class="col-5">
                     <div class="content">
-                        <div class="title">Безопасность пациента наш девиз</div>
-                        <p class="content__desc">В нашей клинике применяются анестетики производства фирм: «3М-ESPE» (убистезин), «SEPTODONT» (септанест), «AVENTIS» (ультракаин).</p>
+                        <div class="sub-title">Услуги</div>
+                        <div class="title">Металлокерамика, безметалловая керамика</div>
+                        <p class="content__desc">Протезирование металлокерамическими коронками сегодня наиболее часто применяемый метод в ортопедической стоматологии. </p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="img-arround">
-                        <img src="./img/security.jpg" class="img-responsive">
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="security">
-                        <div class="security__item">
-                            <div class="security__title">15 лет</div>
-                            <div class="security__desc">Опыта</div>
-                        </div>
-                        <div class="security__item">
-                            <div class="security__title">32</div>
-                            <div class="security__desc">Специалистов</div>
-                        </div>
-                        <div class="security__item">
-                            <div class="security__title">1034</div>
-                            <div class="security__desc">Довольных пациентов</div>
-                        </div>
+                        <img src="./img/ceramics-1.jpg" class="img-responsive">
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section>
+    <section class="bottom-section">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col">
                     <div>
-                        <img src="./img/security-2.jpg" class="img-responsive">
+                        <img src="./img/ceramics-2.jpg" class="img-responsive">
                     </div>
                 </div>
                 <div class="col-5">
                     <div class="content">
-                        <div class="sub-title">Техника</div>
-                        <div class="title">
-                            АВТОКЛАВ MELAG
-                        </div>
                         <p class="content__desc">
-                            Стерилизация проводится в автоклаве фирмы «MELAG» (Германия), инструменты запечатываются в специальные пакеты для стерилизации. 
+                            Скажем для начала, что в нашей клинике «ЕВВА-ДЕНТ» препарирование зубов производится с круговым уступом в 99,9% случаев. 
                         </p>
-                        <div class="content__desc">
-                            Предварительно инструменты обрабатываются в дезинфицирующих растворах в ультразвуковой мойке. Ведется строгий контроль над процессом обработки и стерилизации инструментов. Риск заражения СПИДом, вирусным гепатитом «В», «С» и другими заболеваниями отсутствует. Визиография зубов, применяемая в нашей клинике, дает в 8-10 раз меньше облучения, чем обычный рентгеновский снимок на пленку. 
-                        </div>
+                        <p class="content__desc">
+                            Это важный момент, дающий наиболее качественный и долговечный продукт. 
+                        </p>
+                        <p class="content__desc">
+                            Для более детального разъяснения приведем 
+                            4 основных вида керамических коронок, которые предлагаются нашим пациентам:
+                        </p>
+                        <ol class="content__ol">
+                            <li>Металлокерамика с литым металлическим 
+                                каркасом из КХС</li>
+                            <li>Металлокерамика с фрезерованным каркасом из </li>
+                            <li>Безметалловая керамика с циркониевым 
+                                каркасом</li>
+                            <li>Безметалловые цельнокерамические коронки,  
+                                изготовленные методом прессования.</li>
+                        </ol>
                     </div>
                 </div>
             </div>
@@ -161,106 +153,116 @@
             <div class="row align-items-center">
                 <div class="col-5">
                     <div class="content">
-                        <div class="sub-title">Техника</div>
-                        <div class="title">3М-ESPE</div>
+                        <div class="sub-title">Металлокерамика с литым металлическим каркасом из КХС</div>
                         <p class="content__desc">
-                            Pentamix™ 2, производства компании 3M ESPE, представляет собой автоматическое смесительное устройство для смешивания стоматологических оттискных материалов Penta™. 
+                            Это традиционный и испытанный вариант протезирования, который применяется уже более 30-ти лет многими стоматологами, но имеет ряд недостатков. Сначала отливается каркас коронки, затем послойно наносится керамическая масса на металл и обжигается в специальной печи. 
                         </p>
                         <p class="content__desc">
-                            Оттискные материалы Penta™, производства компании 3M ESPE, разработаны специально для этого устройства и поставляются в специальных пакетах из фольги. Это единственная форма упаковки, используемая в устройствах Pentamix™. 
+                            В первую очередь – это качество литья. При этом методе в металлическом каркасе бывает множество микропор, микротрещин, а также усадка, которая приводит к плохому прилеганию по уступам на зубе. Литой каркас постепенно уступает место более современному – фрезерованному.
                         </p>
-                        <p class="content__desc">
-                            Каждый Penta™ пакет из фольги запечатан уплотнительным колпачком PentaMatic. Внешняя геометрия уплотнительного колпачка обеспечивает правильное позиционирование картриджа. 
-                        </p>
-                        <p class="content__desc">
-                            После запуска устройства Pentamix™ специальное внутреннее устройство открывает пакет из фольги после подачи необходимого давления, устанавливаемого поршнем. 
-                        </p>
-                        <div class="content__desc">
-                            Коннекторы на уплотнительных колпачках PentaMatic предназначены для правильной установки смесительного наконечника.
-                        </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="img-row-right">
-                        <img src="./img/security-3.jpg" class="img-responsive">
+                        <img src="./img/ceramics-3.jpg" class="img-responsive">
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="patients-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="title">Наши пациенты уже сделали <br /> свой выбор</div>
-                    <button data-fancybox="dialog" data-src="#sign-up" class="btn btn-white">Записаться</button>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="dentaport-section">
+    <section class="bottom-section">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col">
                     <div>
-                        <img src="./img/security-4.jpg" class="img-responsive">
+                        <img src="./img/ceramics-4.jpg" class="img-responsive">
                     </div>
                 </div>
                 <div class="col-5">
                     <div class="content">
-                        <div class="sub-title">Техника</div>
-                        <div class="title">
-                            МОРИТА <br /> DENTAPORT ZX
-                        </div>
+                        <div class="sub-title">Металлокерамика с фрезерованным каркасом из КХС.</div>
                         <p class="content__desc">
-                            Уникальная модульная система, которая включает в себя модуль апекслокатора и модуль эндодонтического наконечника. Несколько автоматических функций управления обеспечивают безопасное и комфортное лечение. 
+                            Это современный метод изготовления, дающий очень точное прилегание каркаса коронки на уступах. В литературе метод фрезерования в стоматологии называют также CAD/CAM – технологией. 
                         </p>
                         <p class="content__desc">
-                            Также есть возможность подключения модуля полимеризационной лампы.
+                            Суть ее заключается в сканировании зуба или гипсовой модели зуба специальным лазерным сканером, последующей передаче данных на компьютер со спецпрограммой и дальнейшее фрезерование каркаса под руководством этой компьютерной программы специальным фрезерным оборудованием. 
                         </p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="helodent-section">
-        <div class="container">
-            <div class="row justify-content-end align-items-center">
-                <div class="col-5">
-                    <div class="content">
-                        <div class="sub-title">Техника</div>
-                        <div class="title">HELIODENT PLUS</div>
-                        <p class="content__desc">
-                            Для быстрой и безопасной интраоральной рентгенографии Ваша клиника обязательно должна быть оснащена системой, управлять которой Вам будет легко и просто. Интерфейс пользователя системы должен быть понятным и обеспечивать возможность интуитивного управления. 
-                        </p>
-                        <p class="content__desc last">
-                            HELIODENTPLUS – это интраоральная рентгенографическая система новейшего поколения, ориентированная на потребности Ваших специалистов. Она долговечна и полностью отвечает всем Вашим требованиям.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="ultrasonic-section">
+    <section class="bottom-section">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-5">
                     <div class="content">
-                        <div class="sub-title">Техника</div>
-                        <div class="title">
-                            АППАРАТ УЛЬТРАЗВУКОВОЙ EMS (США)
-                        </div>
+                        <div class="sub-title">Безметалловая керамика с циркониевым каркасом</div>
                         <p class="content__desc">
-                            Это совершенный мобильный ультразвуковой аппарат. Новейший технологический дизайн, удобство в использовании и уникальные функции делают его идеальным ультразвуковым скейлером для вашего кабинета. 
+                            Метод изготовления каркаса такой же, как у фрезерованных металлокерамических коронок. 
                         </p>
                         <p class="content__desc">
-                            Этот компактный и мощный аппарат рекомендуем для пародонтологии, снятия зубных отложений, эндодонтии.
+                            Отличие в том, что оксид циркония является белым по цвету материалом, его перекрывать толстыми непрозрачными слоями керамики нет необходимости, поэтому сделать более эстетичную и прозрачную коронку не составляет трудности для наших опытных высококвалифицированных зубных техников. 
+                        </p>
+                        <p class="content__desc">
+                            Так как оксид циркония является мягким изначально материалом, фрезеровать его несложно, но после его обязательно помещают в специальные печи и обжигают в течение 8 часов при температуре до 1200 грС (у разных производителей циркония могут быть разные параметры обжига). 
+                        </p>
+                        <p class="content__desc">
+                            Нанесение керамической массы происходит обычным способом, но материалы для этих коронок несколько другие и имеют более высокую цену.
                         </p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="img-row-right">
-                        <img src="./img/security-6.jpg" class="img-responsive">
+                        <img src="./img/ceramics-5.jpg" class="img-responsive">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="bottom-section">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col">
+                    <div>
+                        <img src="./img/ceramics-6.jpg" class="img-responsive">
+                    </div>
+                </div>
+                <div class="col-5">
+                    <div class="content">
+                        <div class="sub-title">Безметалловые цельнокерамические коронки</div>
+                        <p class="content__desc">
+                            Это наиболее надежные коронки, имеющие хорошую прозрачность, эстетику. Изготавливаются они из цельного керамического материала, поэтому и мало подвержены сколам. 
+                        </p>
+                        <p class="content__desc">
+                            Технология изготовления здесь проще, но требует большого опыта и навыков у зубного техника. Прилегание по уступам чуть хуже, чем у фрезерованных коронок, но лучше, чем у литых металлокерамических коронок. 
+                        </p>
+                        <p class="content__desc">
+                            Это лучшее решение для покрытия «живых» зубов. Обычно из этого материала изготавливают керамические вкладки, накладки и виниры. Полные коронки изготавливаются редко. При правильной фиксации более надежной конструкции нет.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="bottom-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-5">
+                    <div class="content">
+                        <div class="sub-title">Безметалловые цельнокерамические конструкции</div>
+                        <p class="content__desc">
+                            CEREC (Chairside Economical Restorations of Esthetic Ceramiс) - аппарат для экономичной и эстетичной керамической реставрации. Это комплекс из технологии, оборудования и материалов для изготовления зубных микропротезов (вкладок, виниров, коронок), шлифуемых из керамических блоков с применением специализированной CAD/CAM системы. Разработан в университете Цюриха.
+                        </p>
+                        <p class="content__desc">
+                            Протезирование с использованием CEREC осуществляется за один сеанс. Препарирование и подготовка зубов к реставрации ничем не отличается от обычных методик. Отличие в том, что пациенту не нужно снимать слепков с челюстей. Потом компактным 3D-сканирующим устройством создаётся трёхмерная компьютерная модель подготовленной к протезированию полости и окружающих тканей. Следующим шагом стоматолог в рамках модели челюсти формирует модель керамического протеза. Затем выбирает заготовку подходящего цвета и размера помещает в подключенный к компьютеру шлифовальный автомат, после чего данный автомат парой ротационных штифтовых насадок с рабочей частью на основе алмазной крошки вырезает протез. Через 10-20 минут протез готов, и можно приступать к его примерке и фиксации. Заготовки могут быть из стеклокерамики, полевого шпата, пластмассы. Чаще всего в нашей клинике используются блоки E-MAX и полевой шпат.
+                        </p>
+                        <button data-fancybox="dialog" data-src="#sign-up" class="btn">Записаться</button>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="img-row-right">
+                        <img src="./img/ceramics-7.jpg" class="img-responsive">
                     </div>
                 </div>
             </div>
