--- a/app/reviews.html
+++ b/app/reviews.html
@@ -31,7 +31,10 @@
 </head>
 
 <body>
-    <div id="reviews" v-cloak>
+    <div id="app" v-cloak>
+        <div id="page-preloader" class="preloader">
+            <div class="loader"></div>
+        </div>
         <section class="main-reviews-section">
             <header class="header">
                 <div class="container">
@@ -42,7 +45,27 @@
                         <div class="col-lg-8">
                             <ul class="menu">
                                 <li class="menu__item">
-                                    <a href="#" class="menu__link">Услуги</a>
+                                    <a class="menu__link">Услуги</a>
+                                    <ul class="sub-menu">
+                                        <li>
+                                            <a href="implants.html">Имплантация</a>
+                                        </li>
+                                        <li>
+                                            <a href="caries.html">Лечение кариеса зубов</a>
+                                        </li>
+                                        <li>
+                                            <a href="professional-oral-hygiene.html">Профессиональная гигиена <br /> полости рта</a>
+                                        </li>
+                                        <li>
+                                            <a href="dental-canal-treatment.html">Лечение каналов зубов</a>
+                                        </li>
+                                        <li>
+                                            <a href="visiographic-examination-of-teeth.html">Визиографическое <br /> обследование зубов</a>
+                                        </li>
+                                        <li>
+                                            <a href="metal-ceramics.html">Керамика металл./без</a>
+                                        </li>
+                                    </ul>
                                 </li>
                                 <li class="menu__item">
                                     <a href="works.html" class="menu__link">Работы</a>
@@ -52,6 +75,17 @@
                                 </li>
                                 <li class="menu__item">
                                     <a href="staff.html" class="menu__link">Персонал</a>
+                                    <ul class="sub-menu">
+                                        <li>
+                                            <a href="karakhanyan-vaagn.html">Караханян Ваагн Теванович</a>
+                                        </li>
+                                        <li>
+                                            <a href="kolobaeva-natalia.html">Колобаева Наталья Вячеславовна</a>
+                                        </li>
+                                        <li>
+                                            <a href="kozhukhova-arina.html">Кожухова Арина Петровна</a>
+                                        </li>
+                                    </ul>
                                 </li>
                                 <li class="menu__item">
                                     <a href="reviews.html" class="menu__link">Отзывы</a>
