--- a/app/staff.html
+++ b/app/staff.html
@@ -27,6 +27,9 @@
 </head>
 
 <body>
+    <div id="page-preloader" class="preloader">
+        <div class="loader"></div>
+    </div>
     <header class="header">
         <div class="container">
             <div class="row align-items-center">
@@ -36,7 +39,27 @@
                 <div class="col-lg-8">
                     <ul class="menu">
                         <li class="menu__item">
-                            <a href="#" class="menu__link">Услуги</a>
+                            <a class="menu__link">Услуги</a>
+                            <ul class="sub-menu">
+                                <li>
+                                    <a href="implants.html">Имплантация</a>
+                                </li>
+                                <li>
+                                    <a href="caries.html">Лечение кариеса зубов</a>
+                                </li>
+                                <li>
+                                    <a href="professional-oral-hygiene.html">Профессиональная гигиена <br /> полости рта</a>
+                                </li>
+                                <li>
+                                    <a href="dental-canal-treatment.html">Лечение каналов зубов</a>
+                                </li>
+                                <li>
+                                    <a href="visiographic-examination-of-teeth.html">Визиографическое <br /> обследование зубов</a>
+                                </li>
+                                <li>
+                                    <a href="metal-ceramics.html">Керамика металл./без</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="menu__item">
                             <a href="works.html" class="menu__link">Работы</a>
@@ -46,6 +69,17 @@
                         </li>
                         <li class="menu__item">
                             <a href="staff.html" class="menu__link">Персонал</a>
+                            <ul class="sub-menu">
+                                <li>
+                                    <a href="karakhanyan-vaagn.html">Караханян Ваагн Теванович</a>
+                                </li>
+                                <li>
+                                    <a href="kolobaeva-natalia.html">Колобаева Наталья Вячеславовна</a>
+                                </li>
+                                <li>
+                                    <a href="kozhukhova-arina.html">Кожухова Арина Петровна</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="menu__item">
                             <a href="reviews.html" class="menu__link">Отзывы</a>
@@ -89,7 +123,7 @@
                             <div class="person__desc">
                                 Кандидат медицинских наук, главный врач клиники. Стаж работы с 1993 года. Стажировался в Швеции, Германии, США.
                             </div>
-                            <a href="karahanyan-vaagn.html" class="btn">Подробнее</a>
+                            <a href="karakhanyan-vaagn.html" class="btn">Подробнее</a>
                         </div>
                     </div>
                 </div>
@@ -103,7 +137,7 @@
                                 Стаж работы с 2003 года. Стажировалась в Германии и на Украине (Полтава) проводит лечение зубов любой сложности.
                             </div>
                             <div class="person__socials">
-                                <a href="#"><img src="./img/facebook.svg"></a>
+                                <a target="_blank" href="https://www.facebook.com/profile.php?id=100005578628418&lst=1506821263%3A100005578628418%3A1482757848"><img src="./img/facebook.svg"></a>
                             </div>
                             <a href="kolobaeva-natalia.html" class="btn">Подробнее</a>
                         </div>
