--- a/app/works.html
+++ b/app/works.html
@@ -27,6 +27,9 @@
 </head>
 
 <body>
+    <div id="page-preloader" class="preloader">
+        <div class="loader"></div>
+    </div>
     <section class="main-works-section">
         <header class="header">
             <div class="container">
@@ -37,7 +40,27 @@
                     <div class="col-lg-8">
                         <ul class="menu">
                             <li class="menu__item">
-                                <a href="#" class="menu__link">Услуги</a>
+                                <a class="menu__link">Услуги</a>
+                                <ul class="sub-menu">
+                                    <li>
+                                        <a href="implants.html">Имплантация</a>
+                                    </li>
+                                    <li>
+                                        <a href="caries.html">Лечение кариеса зубов</a>
+                                    </li>
+                                    <li>
+                                        <a href="professional-oral-hygiene.html">Профессиональная гигиена <br /> полости рта</a>
+                                    </li>
+                                    <li>
+                                        <a href="dental-canal-treatment.html">Лечение каналов зубов</a>
+                                    </li>
+                                    <li>
+                                        <a href="visiographic-examination-of-teeth.html">Визиографическое <br /> обследование зубов</a>
+                                    </li>
+                                    <li>
+                                        <a href="metal-ceramics.html">Керамика металл./без</a>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="menu__item">
                                 <a href="works.html" class="menu__link">Работы</a>
@@ -47,6 +70,17 @@
                             </li>
                             <li class="menu__item">
                                 <a href="staff.html" class="menu__link">Персонал</a>
+                                <ul class="sub-menu">
+                                    <li>
+                                        <a href="karakhanyan-vaagn.html">Караханян Ваагн Теванович</a>
+                                    </li>
+                                    <li>
+                                        <a href="kolobaeva-natalia.html">Колобаева Наталья Вячеславовна</a>
+                                    </li>
+                                    <li>
+                                        <a href="kozhukhova-arina.html">Кожухова Арина Петровна</a>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="menu__item">
                                 <a href="reviews.html" class="menu__link">Отзывы</a>
@@ -74,61 +108,156 @@
                 <div class="col-12">
                     <div class="works">
                         <div class="works__item">
-                            <img src="./img/work-1.jpg" class="img-responsive">
+                            <a 
+                                data-fancybox="work"
+                                data-src="./img/work-1.jpg"
+                                class="our-works-carousel__item">
+                                <img src="./img/work-1.jpg" class="img-responsive">
+                            </a>
                         </div>
                         <div class="works__item">
-                            <img src="./img/work-2.jpg" class="img-responsive">
+                            <a 
+                                data-fancybox="work"
+                                data-src="./img/work-2.jpg"
+                                class="our-works-carousel__item">
+                                <img src="./img/work-2.jpg" class="img-responsive">
+                            </a>
                         </div>
                         <div class="works__item">
-                            <img src="./img/work-3.jpg" class="img-responsive">
+                            <a 
+                                data-fancybox="work"
+                                data-src="./img/work-3.jpg"
+                                class="our-works-carousel__item">
+                                <img src="./img/work-3.jpg" class="img-responsive">
+                            </a>
                         </div>
                         <div class="works__item">
-                            <img src="./img/work-4.jpg" class="img-responsive">
+                            <a 
+                                data-fancybox="work"
+                                data-src="./img/work-4.jpg"
+                                class="our-works-carousel__item">
+                                <img src="./img/work-4.jpg" class="img-responsive">
+                            </a>
                         </div>
                         <div class="works__item">
-                            <img src="./img/work-5.jpg" class="img-responsive">
+                            <a 
+                                data-fancybox="work"
+                                data-src="./img/work-5.jpg"
+                                class="our-works-carousel__item">
+                                <img src="./img/work-5.jpg" class="img-responsive">
+                            </a>
                         </div>
                         <div class="works__item">
-                            <img src="./img/work-6.jpg" class="img-responsive">
+                            <a 
+                                data-fancybox="work"
+                                data-src="./img/work-6.jpg"
+                                class="our-works-carousel__item">
+                                <img src="./img/work-6.jpg" class="img-responsive">
+                            </a>
                         </div>
                         <div class="works__item">
-                            <img src="./img/work-7.jpg" class="img-responsive">
+                            <a 
+                                data-fancybox="work"
+                                data-src="./img/work-7.jpg"
+                                class="our-works-carousel__item">
+                                <img src="./img/work-7.jpg" class="img-responsive">
+                            </a>
                         </div>
                         <div class="works__item">
-                            <img src="./img/work-8.jpg" class="img-responsive">
+                            <a 
+                                data-fancybox="work"
+                                data-src="./img/work-8.jpg"
+                                class="our-works-carousel__item">
+                                <img src="./img/work-8.jpg" class="img-responsive">
+                            </a>
                         </div>
                         <div class="works__item">
-                            <img src="./img/work-9.jpg" class="img-responsive">
+                            <a 
+                                data-fancybox="work"
+                                data-src="./img/work-9.jpg"
+                                class="our-works-carousel__item">
+                                <img src="./img/work-9.jpg" class="img-responsive">
+                            </a>
                         </div>
                         <div class="works__item">
-                            <img src="./img/work-10.jpg" class="img-responsive">
+                            <a 
+                                data-fancybox="work"
+                                data-src="./img/work-10.jpg"
+                                class="our-works-carousel__item">
+                                <img src="./img/work-10.jpg" class="img-responsive">
+                            </a>
                         </div>
                         <div class="works__item">
-                            <img src="./img/work-11.jpg" class="img-responsive">
+                            <a 
+                                data-fancybox="work"
+                                data-src="./img/work-11.jpg"
+                                class="our-works-carousel__item">
+                                <img src="./img/work-11.jpg" class="img-responsive">
+                            </a>
                         </div>
                         <div class="works__item">
-                            <img src="./img/work-12.jpg" class="img-responsive">
+                            <a 
+                                data-fancybox="work"
+                                data-src="./img/work-12.jpg"
+                                class="our-works-carousel__item">
+                                <img src="./img/work-12.jpg" class="img-responsive">
+                            </a>
                         </div>
                         <div class="works__item">
-                            <img src="./img/work-13.jpg" class="img-responsive">
+                            <a 
+                                data-fancybox="work"
+                                data-src="./img/work-13.jpg"
+                                class="our-works-carousel__item">
+                                <img src="./img/work-13.jpg" class="img-responsive">
+                            </a>
                         </div>
                         <div class="works__item">
-                            <img src="./img/work-14.jpg" class="img-responsive">
+                            <a 
+                                data-fancybox="work"
+                                data-src="./img/work-14.jpg"
+                                class="our-works-carousel__item">
+                                <img src="./img/work-14.jpg" class="img-responsive">
+                            </a>
                         </div>
                         <div class="works__item">
-                            <img src="./img/work-15.jpg" class="img-responsive">
+                            <a 
+                                data-fancybox="work"
+                                data-src="./img/work-15.jpg"
+                                class="our-works-carousel__item">
+                                <img src="./img/work-15.jpg" class="img-responsive">
+                            </a>
                         </div>
                         <div class="works__item">
-                            <img src="./img/work-16.jpg" class="img-responsive">
+                            <a 
+                                data-fancybox="work"
+                                data-src="./img/work-16.jpg"
+                                class="our-works-carousel__item">
+                                <img src="./img/work-16.jpg" class="img-responsive">
+                            </a>
                         </div>
                         <div class="works__item">
-                            <img src="./img/work-17.jpg" class="img-responsive">
+                            <a 
+                                data-fancybox="work"
+                                data-src="./img/work-17.jpg"
+                                class="our-works-carousel__item">
+                                <img src="./img/work-17.jpg" class="img-responsive">
+                            </a>
                         </div>
                         <div class="works__item">
-                            <img src="./img/work-18.jpg" class="img-responsive">
+                            <a 
+                                data-fancybox="work"
+                                data-src="./img/work-18.jpg"
+                                class="our-works-carousel__item">
+                                <img src="./img/work-18.jpg" class="img-responsive">
+                            </a>
                         </div>
                         <div class="works__item">
-                            <img src="./img/work-19.jpg" class="img-responsive">
+                            <a 
+                                data-fancybox="work"
+                                data-src="./img/work-19.jpg"
+                                class="our-works-carousel__item">
+                                <img src="./img/work-19.jpg" class="img-responsive">
+                            </a>
                         </div>
                     </div>
                 </div>
