--- a/app/implants.html
+++ b/app/implants.html
@@ -27,6 +27,9 @@
 </head>
 
 <body>
+    <div id="page-preloader" class="preloader">
+        <div class="loader"></div>
+    </div>
     <header class="header">
         <div class="container">
             <div class="row align-items-center">
@@ -36,7 +39,27 @@
                 <div class="col-lg-8">
                     <ul class="menu">
                         <li class="menu__item">
-                            <a href="#" class="menu__link">Услуги</a>
+                            <a class="menu__link">Услуги</a>
+                            <ul class="sub-menu">
+                                <li>
+                                    <a href="implants.html">Имплантация</a>
+                                </li>
+                                <li>
+                                    <a href="caries.html">Лечение кариеса зубов</a>
+                                </li>
+                                <li>
+                                    <a href="professional-oral-hygiene.html">Профессиональная гигиена <br /> полости рта</a>
+                                </li>
+                                <li>
+                                    <a href="dental-canal-treatment.html">Лечение каналов зубов</a>
+                                </li>
+                                <li>
+                                    <a href="visiographic-examination-of-teeth.html">Визиографическое <br /> обследование зубов</a>
+                                </li>
+                                <li>
+                                    <a href="metal-ceramics.html">Керамика металл./без</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="menu__item">
                             <a href="works.html" class="menu__link">Работы</a>
@@ -46,6 +69,17 @@
                         </li>
                         <li class="menu__item">
                             <a href="staff.html" class="menu__link">Персонал</a>
+                            <ul class="sub-menu">
+                                <li>
+                                    <a href="karakhanyan-vaagn.html">Караханян Ваагн Теванович</a>
+                                </li>
+                                <li>
+                                    <a href="kolobaeva-natalia.html">Колобаева Наталья Вячеславовна</a>
+                                </li>
+                                <li>
+                                    <a href="kozhukhova-arina.html">Кожухова Арина Петровна</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="menu__item">
                             <a href="reviews.html" class="menu__link">Отзывы</a>
